reparado error en ruta de index

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
       content="#1c1c1e"
       media="(prefers-color-scheme: dark)"
     />
+    <!-- ¡SOLUCIÓN para el favicon! -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="https://i.imgur.com/gAthC4y.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="https://i.imgur.com/gAthC4y.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="https://i.imgur.com/gAthC4y.png"
+    />
 
     <!-- 2. Enlace al manifiesto de la aplicación web -->
     <link rel="manifest" href="manifest.json" />
@@ -599,7 +617,7 @@
             short_name: "ToDo Flow",
             description:
               "Una aplicación de lista de tareas progresiva, moderna y funcional.",
-            start_url: ".", // <-- Usa '.' para compatibilidad con GitHub Pages
+            start_url: "/mi_todo_app/", // <-- Usa '.' para compatibilidad con GitHub Pages
             display: "standalone",
             background_color: "#f0f2f5",
             theme_color: "#007aff",
